log
Thu 31 Aug 2023 04:11:48 PM UTC: 
 tests:  0|6
total_score: 0/70
85cdccb
Wed 06 Sep 2023 09:56:54 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
b32a470
Wed 06 Sep 2023 09:58:37 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:14: error: ‘*nuevoMapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |     nuevoMapa->buckets[i]=NULL;
      |     ~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
24d9ab6
